# site-vacuum-crate

./: .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
src/: converter.rs  crawler.rs  fetcher.rs  main.rs  models.rs  search.rs
src/api/: crawl.rs  mod.rs  search.rs
