[package]
name = "site-vacuum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7.2"
tower-http = { version = "0.5.0", features = ["cors", "fs", "timeout"] }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
scraper = "0.17"
html2md = "0.2"
url = "2.4"
futures = "0.3"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
axum-macros = "0.5.0"
tracing = "0.1.41"
thirtyfour = "0.31.0"
tokio-tungstenite = "0.20.1"
tokio-stream = { version = "0.1.14", features = ["sync"] }
chrono = "0.4"
serde_json = "1.0"
spider = { version = "2", features = ["sync", "regex", "cache", "chrome", "smart"] }
tower = "0.4"
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4", "serde"] }
urlencoding = "2.1"
